syntax = "proto3";

package chat;


option go_package = "service/rpc/proto/proto;chat";


// 枚举，描述系统中不同类型的消息
enum MessageType {
  TEXT = 0;            // 文本消息
  IMAGE = 1;           // 图片消息
  FILE = 2;            // 文件消息
  FRIEND_REQUEST = 3;  // 好友请求
  GROUP_INVITE = 4;    // 群组邀请
  ONLINE_STATUS = 5;   // 在线状态更新
}

// 用户基本信息结构
message User {
  string user_id = 1;      // 用户唯一标识
  string username = 2;     // 用户名
  string avatar_url = 3;   // 头像URL
}

// 聊天消息结构
message MyMessage {
  string message_id = 1;      // 消息唯一标识
  string user_from = 2;       // 发送者用户ID
  string send_target = 3;     // 接收者用户ID或群组ID
  string content = 4;         // 消息内容
  MessageType type = 5;       // 消息类型
  int64 send_time = 6;        // 发送时间（Unix时间戳）
}

// 发送消息请求
message SendMessageRequest {
  MyMessage message = 1;
}

// 发送消息响应
message SendMessageResponse {
  bool success = 1;            // 是否发送成功
  string error_message = 2;    // 错误信息（如果有）
}

// 消息流请求（用于实时接收消息的流式RPC）
message MessageStreamRequest {
  string user_id = 1; // 当前用户ID
}

// 好友请求结构
message FriendRequest {
  string applicant_from = 1;   // 申请人ID
  string applicant_target = 2; // 被申请人ID
  string applicant_reason = 3; // 申请理由
  int64 applicant_time = 4;    // 申请时间
}

// 发送好友请求
message SendFriendRequest {
  FriendRequest friend_request = 1;
}

// 发送好友请求的响应
message SendFriendResponse {
  bool success = 1;            // 是否成功
  string error_message = 2;    // 错误信息（如果有）
}

// 处理好友请求
message HandleFriendRequest {
  string applicant_from = 1;   // 申请人ID
  string applicant_target = 2; // 被申请人ID
  bool accept = 3;             // 是否接受
  string applicant_reason = 4; // 处理理由
  int64 applicant_time = 5;    // 处理时间
}

// 处理好友请求的响应
message HandleFriendRequestResponse {
  bool success = 1;            // 是否成功
  string error_message = 2;    // 错误信息（如果有）
}

// 获取好友列表请求
message ListFriendsRequest {
  string user_id = 1; // 请求者用户ID
}

// 获取好友列表响应
message ListFriendsResponse {
  repeated User friends = 1; // 好友列表
}

// 获取好友请求列表请求
message ListFriendRequestsRequest {
  string user_id = 1; // 请求者用户ID
}

// 获取好友请求列表响应
message ListFriendRequestsResponse {
  repeated User friend_requests = 1; // 好友请求列表
}

// 群聊创建请求
message GroupCreation  {
  string GroupID =1;
  string GroupName = 2;            // 群聊名称
  string OwnerID = 3;            // 创建者ID
  int64 CreatedTime =4;
  repeated string member_ids = 5;   // 初始成员ID列表

}

message CreateGroupRequest {
  GroupCreation group_creation = 1;  // 这里引用了GroupCreation类型
}

// 群聊创建响应
message CreateGroupResponse {
  bool success = 1;                 // 是否创建成功
  string error_message = 2;         // 错误信息
}

// 群聊加入申请
message GroupJoinRequest {
  string applicant_id = 1;          // 申请人ID
  string group_id = 2;              // 群聊ID
  string reason = 3;                // 加入理由
}

// 发送群聊加入申请
message SendGroupJoinRequest {
  GroupJoinRequest request = 1;
}

// 群聊加入申请响应
message SendGroupJoinResponse {
  bool success = 1;                 // 是否发送成功
  string error_message = 2;         // 错误信息
}

// 处理群聊加入申请
message HandleGroupJoinRequest {
  string applicant_id = 1;          // 申请人ID
  string group_id = 2;              // 群聊ID
  bool accept = 3;                  // 是否接受申请
}

// 处理群聊加入申请的响应
message HandleGroupJoinResponse {
  bool success = 1;                 // 是否处理成功
  string error_message = 2;         // 错误信息
}

// 加载特定用户聊天记录的请求
message LoadMessagesRequest {
  string user_id = 1;               // 当前用户ID
  string target_user_id = 2;        // 目标用户ID或群组ID
  int32 page = 3;                   // 请求的页码
  int32 page_size = 4;              // 每页显示的消息数量
}

// 加载特定用户聊天记录的响应
message LoadMessagesResponse {
  repeated MyMessage messages = 1;  // 消息列表
  bool has_more = 2;                // 是否还有更多消息
}

// 服务定义
service ChatService {
  // 发送消息
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}

  // 接收消息流
  rpc ReceiveMessageStream(MessageStreamRequest) returns (stream MyMessage) {}

  // 发送好友请求
  rpc SendFriendApplication(SendFriendRequest) returns (SendFriendResponse) {}

  // 处理好友请求
  rpc HandleFriendApplication(HandleFriendRequest) returns (HandleFriendRequestResponse) {}

  // 获取好友列表
  rpc ListFriends(ListFriendsRequest) returns (ListFriendsResponse) {}

  // 获取好友请求列表
  rpc ListFriendRequests(ListFriendRequestsRequest) returns (ListFriendRequestsResponse) {}

  // 发送群聊加入申请
  rpc SendGroupJoinApplication(SendGroupJoinRequest) returns (SendGroupJoinResponse) {}

  // 处理群聊加入申请
  rpc HandleGroupJoinApplication(HandleGroupJoinRequest) returns (HandleGroupJoinResponse) {}

  // 创建群聊
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse) {}

  // 加载与特定用户或群聊的聊天记录
  rpc LoadMessages(LoadMessagesRequest) returns (LoadMessagesResponse) {}
}
